--- a/static/css/index.css
+++ b/static/css/index.css
@@ -2,12 +2,14 @@ body {
   font-family: 'Noto Sans', sans-serif;
 }
 
-img.custom-gif{
-  width: 480px;
-  height: auto;
+.img-container {
   display: flex;
   justify-content: center;
-  align-items: center; 
+}
+
+.custom-gif {
+  width: 480px;
+  height: auto;
 }
 
 .footer .icon-link {
